...
  object GalleryButtonTag {
    const val SINGLE_TAG = "singleGalleryButtonTag"
    const val MULTIPLE_TAG = "multipleGalleryButtonTag"
  }

  object CustomLocationDialogTags {
    const val DIALOG_TITLE = "customLocationDialogTitle"
    const val LOCATION_TEXT_FIELD = "customLocationDialogTextField"
    const val CONFIRM_BUTTON = "customLocationDialogConfirmButton"
    const val CLOSE_BUTTON = "customLocationDialogCloseButton"
    const val DROPDOWN_MENU = "customLocationDialogDropdownMenu"

    fun locationSuggestion(index: Int): String = "customLocationDialogSuggestion$index"
...
    const val PREFERRED_ROOM_TYPE = "preferred_room_type"
    const val SIGN_UP_WITH_PREFERENCES = "sign_up_with_preferences"
    const val LOCATION_PREFERENCE = "locationField"
  }

  object ShareLinkDialogTags {
    const val SHARE_BTN = "shareButton"
    const val DIALOG_TITLE = "shareLinkDialogTitle"
    const val QR_CODE = "shareLinkDialogQrCode"
    const val QR_ERROR = "shareLinkDialogQrError"
    const val COPY_LINK_BUTTON = "shareLinkDialogCopyLinkButton"
    const val CANCEL_TEXT = "shareLinkDialogCancelText"
  }

  object ViewResidencyTags {
    const val ROOT = "viewResidencyRoot"
    const val TOP_BAR_TITLE = "viewResidencyTopBarTitle"
    const val BACK_BUTTON = "viewResidencyBackButton"
...
